argocd/base/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.streamixs.com`)
      kind: Rule
      middlewares:
        - name: pocket-id-auth
          namespace: pocket-id
      services:
        - name: qbittorrent
          port: 8080
  tls: {}
